This is just to motivate myself to improve a little bit every day :)

Best: 32

16-10-2024
Streak: 1
Learned:
Did:
    - Removed moe.tlaster PreCompose from the app, replaced by alpha version of androidx navigation-compose

12-10-2024
Streak: 1
Learned:
Did:
    - Updated packages in libs.versions.toml
    - Found a working version of Compose Navigation that compiles on iOS, to replace precompose

04-10-2024
Streak: 2
Learned:
Did:
    -Linting: make colour codes const
    -Fix, Suppress, or Change config for remaining detekt issues


03-10-2024
Streak: 1
Learned:
Did:
    -Organise backlog
    -Start fixing existing linter issues

30-09-2024
Streak: 1
Learned:
Did:
    -Implemented a number of changes relating to Theme and Dark Theme

27-08-2024
Streak: 1
Learned:
Did:
    -Update .editorconfig

06-05-2024
Streak: 1
Learned:
Did:
    -Refactor SeasonInfo data class to have a sensible constructor,
        split calculations into separate methods

03-05-2024
Streak: 1
Learned:
Did:
    -Make detekt rules that exclude tests also exclude generated files

01-05-2024
Streak: 1
Learned:
Did:
    -Disable ktlint for generated files with .editorconfig
    -Disable ktlint naming rule that doesn't match Composable naming style
    -Clear remaining ktlint errors
    -Generate default detekt config
    -Suppress MagicNumber warning in file that localises ordinal numbers

29-04-2024
Streak: 1
Learned:
Did:
    -Add ktlint plugin to project

24-04-2024
Streak: 32
Learned:
Did:
    -Add linter command script, remove obsolete lint.xml file

23-04-2024
Streak: 31
Learned:
    -Realise linter isn't going to work, need to use ktlint and detekt instead
Did:
    -Add detekt as plugin to project (as yet untested)

22-04-2024
Streak: 30
Learned:
    -Read about adding linter rules
Did:

21-04-2024
Streak: 29
Learned:
Did:
    -Finalise MainMenu title design and implementation

20-04-2024
Streak: 28
Learned:
Did: