@@ -3,7 +3,6 @@ import androidx.compose.foundation.layout.fillMaxSize
 import androidx.compose.material.Surface
 import androidx.compose.runtime.Composable
 import androidx.compose.ui.Modifier
-import org.jetbrains.compose.resources.ExperimentalResourceApi
 import org.jetbrains.compose.ui.tooling.preview.Preview
 import presentation.style.MainTheme
 import presentation.style.setIfDarkMode
@@ -13,7 +12,7 @@ import presentation.style.setIfDarkMode
 fun App() {
     MainTheme {
         Surface(modifier = Modifier.fillMaxSize().setIfDarkMode()) {
-            InitNavStack()
+            Navigation()
         }
     }
 }
