@@ -2,6 +2,12 @@ This is just to motivate myself to improve a little bit every day :)
 
 Best: 32
 
+21-10-2024
+Streak: 1
+Learned:
+Did:
+    - Implement some state in DayPartMenu screen to confirm navigation works
+
 16-10-2024
 Streak: 1
 Learned:
